Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
   <title>Lists Lab</title>
 </head>
 <body>
-
-  <!-- Write your HTML in this file -->
-
+<li>
+  <ul>
+     2 slices of bread, 
+  4 slices of cheese, 
+  1 tbsp of butter
+  </ul>
+</li>
 </body>
 </html>
