Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
 </head>
 <body>
 <li>
-  <ul>
-     2 slices of bread, 
-  4 slices of cheese, 
-  1 tbsp of butter
-  </ul>
+  <ul>2 slices of bread</ul>
+  <ul>slices of cheese</ul>
+  <ul>1 tbsp of butter</ul>
 </li>
 </body>
 </html>
