Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <title>Lists Lab</title>
 </head>
 <body>
-<li>
-  <ul>2 slices of bread</ul>
+<ul>
+  <li>2 slices of bread</ul>
   <ul>slices of cheese</ul>
   <ul>1 tbsp of butter</ul>
 </li>
