--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <body>
 <ul>
   <li>2 slices of bread</ul>
-  <ul>slices of cheese</ul>
-  <ul>1 tbsp of butter</ul>
+  <li>slices of cheese</ul>
+  <li>1 tbsp of butter</ul>
 </li>
 </body>
 </html>
